--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Remesas" asp-action="Index">Remesas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Remesas" asp-action="Index">Transacciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Remesas" asp-action="Listado">Listado de Transacciones</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
