Agregando API en conversion de moneda

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Aplicación de Remesas Internacionales con Gestión de Transacciones en Dólares y Bitcoin</h1>
+    <p>Vete a Transacciones si deseas transferir dinero de USD a BTC o BTC a USD</p>
 </div>
