--- a/Views/Remesas/Listado.cshtml
+++ b/Views/Remesas/Listado.cshtml
@@ -9,51 +9,53 @@
 <h2 class="text-center my-4">Listado de Transacciones</h2>
 
 <div class="table-responsive">
-    <table class="table table-hover align-middle table-bordered shadow-lg rounded">
-        <thead class="thead-dark bg-primary text-white">
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Nombre Remitente</th>
-                <th scope="col">Nombre Destinatario</th>
-                <th scope="col">País Origen</th>
-                <th scope="col">País Destino</th>
-                <th scope="col">Monto Enviado</th>
-                <th scope="col">Tipo de Moneda</th>
-                <th scope="col">Tasa de Cambio</th>
-                <th scope="col">Monto Final</th>
-                <th scope="col">Estado</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var remesa in Model)
-            {
+    <div style="overflow-x: auto; width: 100%;">
+        <table class="table table-hover align-middle table-bordered shadow-lg rounded" style="min-width: 1200px;">
+            <thead class="thead-dark bg-primary text-white">
                 <tr>
-                    <td>@remesa.Id</td>
-                    <td>@remesa.NombreRemitente</td>
-                    <td>@remesa.NombreDestinario</td>
-                    <td>@remesa.PaisOrigen</td>
-                    <td>@remesa.PaisDestino</td>
-                    <td>@remesa.MontoEnviado</td>
-                    <td>@remesa.TipoMoneda</td>
-                    <td>@remesa.TasaCambio</td>
-                    <td>@remesa.MontoFinal</td>
-                    <td>
-                        <span class="badge 
-                              @if(remesa.Estado.Equals("COMPLETADO", StringComparison.OrdinalIgnoreCase)) 
-                                { 
-                                    <text>bg-danger</text> 
-                                } 
-                                else 
-                                { 
-                                    <text>bg-warning</text> 
-                                }">
-                            @remesa.Estado
-                        </span>
-                    </td>
+                    <th scope="col">ID</th>
+                    <th scope="col">Nombre Remitente</th>
+                    <th scope="col">Nombre Destinatario</th>
+                    <th scope="col">País Origen</th>
+                    <th scope="col">País Destino</th>
+                    <th scope="col">Monto Enviado</th>
+                    <th scope="col">Tipo de Moneda</th>
+                    <th scope="col">Tasa de Cambio</th>
+                    <th scope="col">Monto Final</th>
+                    <th scope="col">Estado</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var remesa in Model)
+                {
+                    <tr>
+                        <td>@remesa.Id</td>
+                        <td>@remesa.NombreRemitente</td>
+                        <td>@remesa.NombreDestinario</td>
+                        <td>@remesa.PaisOrigen</td>
+                        <td>@remesa.PaisDestino</td>
+                        <td>@remesa.MontoEnviado</td>
+                        <td>@remesa.TipoMoneda</td>
+                        <td>@remesa.TasaCambio</td>
+                        <td>@remesa.MontoFinal</td>
+                        <td>
+                            <span class="badge
+                                @if(remesa.Estado.Equals("COMPLETADO", StringComparison.OrdinalIgnoreCase))
+                                {
+                                    <text>bg-danger</text>
+                                }
+                                else
+                                {
+                                    <text>bg-warning</text>
+                                }">
+                                @remesa.Estado
+                            </span>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <style>
@@ -81,6 +83,7 @@
         padding: 15px;
         text-align: center;
         vertical-align: middle;
+        white-space: nowrap;
     }
 
     .badge {
